# setup

./: CMakeLists.txt  LICENSE  README.md  system
coding/: CMakeLists.txt  clang-format  clang-tidy  clangd  conanfile.py  gitignore  init.vim
dotfiles/: vimrc
make/: CMakeLists.txt  bd.cpp  mk  mk.ps1
os/: init.vim  ubuntu-bash  win-env.ps1  win-install.ps1
